{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 28,
  "lineage": "51580982-8146-a768-c618-47049c1a3556",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0767046d1677be5a0",
            "arn": "arn:aws:ec2:eu-central-1:900542284977:instance/i-0ed23a262014d5c98",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed23a262014d5c98",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d8f634ba9bd1621e",
            "private_dns": "ip-10-0-1-124.eu-central-1.compute.internal",
            "private_ip": "10.0.1.124",
            "public_ip": "18.197.75.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cbb04495e655cdcd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ae841f0f766c018",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c45248311e8eadf6"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploye_key",
            "aws_security_group.public_security_group",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0767046d1677be5a0",
            "arn": "arn:aws:ec2:eu-central-1:900542284977:instance/i-0a12cb385168279aa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a12cb385168279aa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a34e7a111db659fb",
            "private_dns": "ip-10-0-1-192.eu-central-1.compute.internal",
            "private_ip": "10.0.1.192",
            "public_ip": "52.57.31.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be97a3ea9c5895cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ae841f0f766c018",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0882806db89ef0b50"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploye_key",
            "aws_security_group.private_security_group",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:security-group/sg-0299f7b29375df067",
            "description": "allow app to connect to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0299f7b29375df067",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "from web",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS",
            "name_prefix": "",
            "owner_id": "900542284977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS"
            },
            "timeouts": null,
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:security-group/sg-0882806db89ef0b50",
            "description": "Allow ssh connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0882806db89ef0b50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from my machince",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "to web",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "900542284977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:security-group/sg-0c45248311e8eadf6",
            "description": "Allow traffic to move throug",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c45248311e8eadf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "to web",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "900542284977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "radis_private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:security-group/sg-0ab16fb146cb96606",
            "description": "allow app to connect to radis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab16fb146cb96606",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "from web to radis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "radis",
            "name_prefix": "",
            "owner_id": "900542284977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "radis"
            },
            "timeouts": null,
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:internet-gateway/igw-0fb3185c6c1c2db2e",
            "id": "igw-0fb3185c6c1c2db2e",
            "owner_id": "900542284977",
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fb3185c6c1c2db2e",
            "id": "r-rtb-010c481a0cf6ffdc01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010c481a0cf6ffdc0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fb3185c6c1c2db2e",
            "id": "r-rtb-0b37080d396047a491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b37080d396047a49",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:route-table/rtb-0b37080d396047a49",
            "id": "rtb-0b37080d396047a49",
            "owner_id": "900542284977",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:route-table/rtb-010c481a0cf6ffdc0",
            "id": "rtb-010c481a0cf6ffdc0",
            "owner_id": "900542284977",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085d8d48c6651bf11",
            "route_table_id": "rtb-010c481a0cf6ffdc0",
            "subnet_id": "subnet-0ef1ba1db12b8f51f"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.private1",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05192c854813e642b",
            "route_table_id": "rtb-010c481a0cf6ffdc0",
            "subnet_id": "subnet-01401e35af0b62e34"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.private2",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f43962528e125f81",
            "route_table_id": "rtb-010c481a0cf6ffdc0",
            "subnet_id": "subnet-01ae841f0f766c018"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062d35d1dc367c322",
            "route_table_id": "rtb-010c481a0cf6ffdc0",
            "subnet_id": "subnet-029aab366e60e3611"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public2",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:subnet/subnet-0ef1ba1db12b8f51f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ef1ba1db12b8f51f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900542284977",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:subnet/subnet-01401e35af0b62e34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-01401e35af0b62e34",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900542284977",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:subnet/subnet-01ae841f0f766c018",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01ae841f0f766c018",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900542284977",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:subnet/subnet-029aab366e60e3611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-029aab366e60e3611",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900542284977",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-02644cbf219c5ec8c"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900542284977:vpc/vpc-02644cbf219c5ec8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffd29e24ffbea600",
            "default_route_table_id": "rtb-0c65e201d7934cf8e",
            "default_security_group_id": "sg-01b8199cc838fa217",
            "dhcp_options_id": "dopt-764dc11c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02644cbf219c5ec8c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c65e201d7934cf8e",
            "owner_id": "900542284977",
            "tags": {
              "name": "iti"
            },
            "tags_all": {
              "name": "iti"
            }
          }
        }
      ]
    }
  ]
}